k8s/app-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-flask-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-flask-api
  template:
    metadata:
      labels:
        app: simple-flask-api
    spec:
      containers:
      - name: flask-container
        image: gigglebytesq3c/simple-flask-api:latest
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: simple-flask-service
spec:
  selector:
    app: simple-flask-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
